--- a/Labs/Week1LabTestSHINY.Rmd
+++ b/Labs/Week1LabTestSHINY.Rmd
@@ -286,9 +286,9 @@ quiz(caption = 'Test Your Understanding',
               variable being inspected. The y-axis reflects the frequency, of each value (or, more often, a range of values) of the
               plotted variable. The normal curve associated with a specific variable can be plotted as a line overlaying the
               histogram.'),
-     question_numeric("Approximately how many values of SubAgeT1 fall between 58-61?",
-              answer(10, correct=T),
-              message='You can find this answer by checking the histogram for SubAgeT1.'))
+     question_numeric("Approximately how many students scored between 40 and 50 on Assessment A?",
+              answer(18, correct=T),
+              message='You can find this answer by checking the histogram for A. You could also check the frequency table.'))
 ```
 
 
@@ -380,13 +380,13 @@ For all continuous variables, check the measures of variance described in class.
 
 ```{r q7, echo = FALSE}
 quiz(caption = 'Test Your Understanding',
-     question_numeric("What is the IQR for Age?",
-              answer(9, correct=T),
+     question_numeric("What is the IQR for Assessment B?",
+              answer(4, correct=T),
               message = "To get the IQR for a variable, you'll need to subtract the 25th percentile from the 75th percentile."),
-     question_numeric("What is the maximum subjective age before the memory test?",
-              answer(88, correct=T)),
-     question_numeric("What is the standard deviation for scores on the memory test? Please report your answer to two decimal places.",
-              answer(12.71, correct=T))
+     question_numeric("What is the maximum score on Assessment C?",
+              answer(78, correct=T)),
+     question_numeric("What is the standard deviation of scores on Assessment D? Please report your answer to two decimal places.",
+              answer(2.15, correct=T))
 )
 ```
 
@@ -422,19 +422,19 @@ Using these criteria, answer the following questions:
 
 ```{r q8, echo = FALSE}
 quiz(caption = 'Test Your Understanding',
-     question_numeric('If memory scores in this study were perfectly normally distributed, there would be symmetrical upper and lower thresholds between which 95% of scores would fall. What is the upper threshold value? Please round your answer to 2 decimal places.',
-              answer(70.13, correct = T),
+     question_numeric('If scores on Assessment A were perfectly normally distributed, there would be symmetrical upper and lower thresholds between which 95% of scores would fall. What is the upper threshold value? Please round your answer to 2 decimal places.',
+              answer(48.28, correct = T),
               tolerance = .02,
               message = 'See the solution below'),
-     question_numeric('If the subjective age after the memory test variable was perfectly normally distributed, there would be symmetrical upper and lower thresholds between which 68% of scores would fall. What is the lower threshold value? Please round your answer to 2 decimal places.',
-              answer(53.55, correct=T),
+     question_numeric('If scores on Assessment D were perfectly normally distributed, there would be symmetrical upper and lower thresholds between which 99.75% of scores would fall. What is the lower threshold value? Please round your answer to 2 decimal places.',
+              answer(75.51, correct=T),
               tolerance = .02,
               message = 'See the solution below'),
-     question('Imagine the age variable is perfectly normally distributed. What is the age range within which 99.75% of the sample falls?',
-              answer('[57.98, 94.60]', correct=T),
-              answer('[64.33, 88.25]'),
-              answer('[70.19, 82.39]'),
-              answer('[70.00, 82.20]'),
+     question('Imagine the age variable is perfectly normally distributed. What is the age range within which 68% of the sample falls?',
+              answer('[15.30, 30.78]', correct=T),
+              answer('[7.87, 38.21]'),
+              answer('[19.00, 24.50]'),
+              answer('[7.56, 38.52]'),
               random_answer_order = T,
               message = 'See the solution below')
 )
@@ -453,7 +453,7 @@ You'll need to get two values from SPSS for each variable to perform these calcu
 You'll need to extract the mean and standard deviation for each variable from SPSS:
 
 ```{r, echo = F}
-descDat <- data.frame(Variable=c('MemoryScore', 'SubAgeT2', 'Age'), Mean = c(round(mean(dat$MemoryScore),2), round(mean(dat$SubAgeT2),2), round(mean(dat$Age),2)),SD=c(round(sd(dat$MemoryScore),3), round(sd(dat$SubAgeT2),3), round(sd(dat$Age),3)))
+descDat <- data.frame(Variable=c('A', 'D', 'Age'), Mean = c(39.09, 81.96, 23.04),SD=c(4.69, 2.15, 7.74))
 
 descDat %>%
   kbl() %>%
@@ -472,23 +472,23 @@ We know that a normal distribution is symmetrical with the mean as its center po
 **99.75%:** $\bar{x}\ \pm\ 3\times s$
 
 
-So, for example, to get the upper 95% threshold for memory score, you would use the following equation:
+So, for example, to get the upper 95% threshold for Assessment A, you would use the following equation:
 
-$$45.21+1.96\times 12.714 = `r round(45.21+1.96*12.714,2)`$$
+$$39.09+1.96\times 4.69 = `r round(39.09+(1.96*4.69),2)`$$
 
-To get the lower 68% threshold, as in the second question, you just subtract instead of add:
+To get the lower 99.75% threshold, as in the second question, you just subtract instead of add:
 
-$$63.31-1\times 9.761 = `r round(63.31-1*9.761,2)`$$
+$$81.96-3\times 2.15 = `r round(81.96-(3*2.15),2)`$$
 
-To get the range of data in which 99.75% of observations fall, as in the third question, you'll do both:
+To get the range of data in which 68% of observations fall, as in the third question, you'll do both:
 
-$$76.29-3\times 6.102 = `r round(76.29-3*6.102,2)`$$
-$$76.29+3\times 6.102 = `r round(76.29+3*6.102,2)`$$
+$$23.04-1\times 7.74 = `r round(23.04-(1*7.74),2)`$$
+$$23.04+1\times 7.74 = `r round(23.04+(1*7.74),2)`$$
 
 </details>
 </br>
 
-## Task 9: Evaluting Normality
+## Task 9: Evaluating Normality
 
 Evaluate the normality of your continuous variables by visually checking the histograms, assessing the skewness and kurtosis values, and running an appropriate statistical test. 
 
@@ -508,45 +508,142 @@ quiz(caption = 'Test Your Understanding',
               answer('Assessment B', correct=T),
               answer('Assessment C'),
               answer('Assessment D'),
-              message = 'Assessment B has a strong ceiling effect, which produced a negative skew in the data. The Shapiro-Wilk test was 
-              significant, indicating the data were not normally distributed. Scores on the other tests were normally distributed.'),
+              message = 'See the solution below. Both the normality test and the histogram suggest that scores on Assessment B are skewed.'),
      question_numeric('What is the skewness value of Assessment C?',
-              answer('ANSWERHERE', correct=T),
-              message = 'See the solution below'),
+              answer(-.018, correct=T),
+              message = 'See the solution below. Due to a sample of less than 50, you should be using the results from the Shapiro-Wilk test.'),
      question_numeric('What is the kurtosis value of Assessment D?',
-              answer('ANSWERHERE', correct=T),
-              message = 'See the solution below')
+              answer(.385, correct=T),
+              message = 'See the solution below. Due to a sample of less than 50, you should be using the results from the Shapiro-Wilk test.')
 )
 ```
 
 <details><summary><span style = "font-weight: bold; font-size: 16pt"> + Click here for a hint </span></summary>
 
+You'll find the *Analyze>Descriptive Statistics>Explore* tab helpful here. As results from two types of normality tests are reported, be sure you understand which you should choose to report.
+
 </details>
 </br>
 
 <details><summary><span style = "font-weight: bold; font-size: 16pt"> + Click here for the solution </span></summary>
+
+Unfortunately, checking normality is not especially straightforward in SPSS. Navigate to the *Analyze>Descriptive Statistics>Explore* tab and add the variables you would like to test to the Dependent List box. Click 'Display: Plots', then click the *Plots* box. In the window that opens, check the 'Normality plots with tests' box, then select 'Histogram' under *Descriptive*. Click 'Continue', then 'OK'.
+
+```{r, echo = F, out.width='60%'}
+knitr::include_graphics('images/week1_9a.PNG')
+```
+
+The normality tests will display under the 'Tests of Normality' heading. As these tests are checking whether the distribution of your variables is significantly different from a normal distribution, a significant result suggests a variable violates normality (i.e., is not normally distributed). We'll learn more about significance and $p$-values later in the course, but for now, we'll consider a $p$-value less than .05 to be significant. To assess the $p$-values, check the 'Sig.' column. In this case, we'll look at the results for the Shapiro-Wilk test since we have a sample of less than 50 participants. Here, the $p$-value associated with Assessment B is less than .05, so this suggests that scores on Assessment B are not normally distributed. 
+
+```{r, echo = F, out.width='70%'}
+knitr::include_graphics('images/week1_9b.PNG')
+```
+
+If you check the histogram, you can confirm that there is a ceiling effect in that most students score near the maximum possible score, leading to negatively skewed data. 
+
+```{r, echo = F, out.width='70%'}
+knitr::include_graphics('images/week1_9c.PNG')
+```
+
 
 </details>
 </br>
 
 ## Task 10: Report and Interpret
 
-Write a paragraph describing your sample as you would include in a methods section. Please be sure to use APA style. Include an APA-style table to present the descriptive data for each variable (excluding ID). 
+Write a paragraph with your results that you could present to the instructor, giving them a suggestion of which assessment they should use in their course. In this paragraph, please do the following: 
 
-When writing a describing your sample, you will need to include, at minimum, the total number of participants included, a description of their available demographic data, and how/where participants were recruited. See the Hughes paper for a brief example.
++ Describe your sample as you would in a methods section. 
+
++ Provide a recommendation for which exam the instructor should use in their course, using your results to support your suggestion.
+
+Make sure to use APA style. Once you're finished, compare your paragraph to the solution paragraph. Is there anything you included that is not in the solution? Is there anything you left out? Does your suggestion match the solution paragraph? If not, why not?
 
 </br>
 </br>
 
 <details><summary><span style = "font-weight: bold; font-size: 16pt"> + Click here for a hint </span></summary>
 
-You might find the [Purdue Owl website](https://owl.purdue.edu/owl/research_and_citation/apa_style/apa_formatting_and_style_guide/general_format.html) helpful for APA formatting.
+You might find the [Purdue Owl website](https://owl.purdue.edu/owl/research_and_citation/apa_style/apa_formatting_and_style_guide/general_format.html) helpful for APA formatting. See the participants/sample section in [this paper](https://journals.sagepub.com/doi/full/10.1177/0956797620939054) for an example of how you might describe your sample. You can see other examples [here](https://journals.sagepub.com/doi/full/10.1177/09567976241231572) and [here](https://www.sciencedirect.com/science/article/pii/S0022103123001439).
 
 </br>
 </br>
 </details>
 
 <details><summary><span style = "font-weight: bold; font-size: 16pt"> + Click here for the solution </span></summary>
+
+For this analysis, we examined results from 4 different assessments in an attempt to identify the one that most accurately captures the range of student abilities. Each of the 4 assessments was presented 15 students in each of the instructor's 3 courses, providing a total sample of 45 students between ages 17 and 52 ($M$ = 23.04, $SD$ = 7.74; 25 male, 19 female, and 2 nonbinary participants). 
+
+Student performance varied widely between the assessments (see Table 1).
+
+**Table 1**
+
+*Assessment Scores - Descriptive Data*
+
+```{r, echo = F, out.width='70%'}
+
+knitr::include_graphics('images/week1_10a.PNG')
+
+```
+
+
+As the average score on Assessment A corresponded to a failing mark, this assessment is not recommended. Conversely, the average score on Assessment B was quite high. Additionally, the data exhibited a negative skew. This suggests that there is a ceiling effect, as most students are scoring close to the maximum possible score (see Figure 1).
+
+</br>
+
+**Figure 1**
+
+*Assessment B Scores*
+```{r, echo = F, message = F, warning=FALSE}
+ggplot(dat, aes(B)) + geom_histogram(fill=baseColor, color = accent3, binwidth = 2) +
+  labs(x='Score', y='Count') +
+  scale_x_continuous(breaks=seq(0, 100, 10), limits = c(0,100)) +
+  theme(axis.title = element_text(size = 16, face = 'bold'),
+        axis.text = element_text(size = 14),
+        panel.background = element_blank(),
+        axis.line = element_line())
+```
+
+*Note.* You cannot produce this figure with SPSS. This is just here to show you an example of an appropriate way to report your results with an APA-style figure.
+
+</br>
+
+Assessments D's average was still too high, and the standard deviation of scores was quite small, indicating that it may not be accurately capturing the variability in student comprehension (see Figure 2).
+
+</br>
+
+**Figure 2**
+
+*Assessment D Scores*
+```{r, echo = F, message = F, warning=FALSE}
+ggplot(dat, aes(D)) + geom_histogram(fill=baseColor, color = accent3, binwidth = 2) +
+  labs(x='Score', y='Count') +
+  scale_x_continuous(breaks=seq(0, 100, 10), limits = c(0,100)) +
+  theme(axis.title = element_text(size = 16, face = 'bold'),
+        axis.text = element_text(size = 14),
+        panel.background = element_blank(),
+        axis.line = element_line())
+```
+
+</br>
+
+Assessment C had a reasonable average, as well as higher variability in the range of scores (see Figure 3). This indicates that, of these assessments, Assessment C may best capture the range of student abilities within the course.
+
+</br>
+
+**Figure 3**
+
+*Assessment C Scores*
+```{r, echo = F, message = F, warning=FALSE}
+ggplot(dat, aes(C)) + geom_histogram(fill=baseColor, color = accent3, binwidth = 2) +
+  labs(x='Score', y='Count') +
+  scale_x_continuous(breaks=seq(0, 100, 10), limits = c(0,100)) +
+  theme(axis.title = element_text(size = 16, face = 'bold'),
+        axis.text = element_text(size = 14),
+        panel.background = element_blank(),
+        axis.line = element_line())
+```
+
 
 
 </br>
