--- a/Lectures/Week01_IntroToNHST_Lecture.Rmd
+++ b/Lectures/Week01_IntroToNHST_Lecture.Rmd
@@ -21,6 +21,19 @@ options(htmltools.dir.version = FALSE)
 
 ```{r xaringan-themer, include = FALSE}
 library(xaringanthemer)
+# style_mono_accent(
+#   base_color = "#18778C",
+#   header_color = "#000000",
+#   header_font_google = google_font("Jost"),
+#   header_font_weight = 500,
+#   text_font_google = google_font("Jost", "300", "300i", "500", "500i"),
+#   code_font_google = google_font("Source Code Pro"),
+#   text_bold_color = '#D95829',
+#   text_slide_number_color = '#18778C',
+#   text_font_size = '16pt'
+# )
+
+
 style_mono_accent(
   base_color = "#18778C",
   header_color = "#000000",
@@ -28,7 +41,7 @@ style_mono_accent(
   header_font_weight = 500,
   text_font_google = google_font("Jost", "300", "300i", "500", "500i"),
   code_font_google = google_font("Source Code Pro"),
-  text_bold_color = '#D95829',
+  text_bold_color = '#4CA384',
   text_slide_number_color = '#18778C',
   text_font_size = '16pt'
 )
@@ -38,10 +51,15 @@ style_mono_accent(
 library(tidyverse)
 knitr::opts_chunk$set(dev = 'svg')
 
-baseColor <- "#18778C"
-accent1 <- '#D95829'
-accent2 <- '#BF3326'
-accent3 <- '#F29422'
+# baseColor <- "#18778C"
+# accent1 <- '#D95829'
+# accent2 <- '#BF3326'
+# accent3 <- '#F29422'
+
+baseColor <- '#4CA384'
+accent1 <- '#9AD079'
+accent2 <- '#18778C'
+accent3 <- '#19424C'
 
 Mode <- function(x) {
   ux <- unique(x)
@@ -136,7 +154,7 @@ ecPlot
 .center[**Continuous Data: Histograms**]
 ```{r, echo = F, fig.height=3.5, fig.width = 4.5, message = F}
 
-ggplot(dat, aes(Age)) + geom_histogram(fill=baseColor, colour = 'darkgray') +
+ggplot(dat, aes(Age)) + geom_histogram(fill=baseColor, colour = accent3) +
   labs(x = 'Age', y = 'Count') +
   theme(axis.text = element_text(size = 14),
         axis.title = element_text(size = 16, face = 'bold'))
@@ -285,7 +303,7 @@ count: false
 
 $x = \{10, 2, 5, 3, 2, 0, 12\}$
 
-$0, 2, 2, \color{#D95829}{3}, 5, 10, 12$
+$0, 2, 2, \color{#4CA384}{3}, 5, 10, 12$
 
 **Median $x$ = 3**
 
@@ -300,7 +318,7 @@ $0, 2, 2, \color{#D95829}{3}, 5, 10, 12$
 $y = \{3, 7, 1, 20, 14, 25\}$
 
 
-$1, 3, \color{#D95829}{7, 14,} 20, 25$
+$1, 3, \color{#4CA384}{7, 14,} 20, 25$
 
 
 $\frac{7+14}{2} = 10.5$
@@ -334,7 +352,7 @@ ecPlot
 
 .pull-right.center[
 
-$x = \{10, \color{#D95829}{2}, 5, 3, \color{#D95829}{2}, 0, 12\}$
+$x = \{10, \color{#4CA384}{2}, 5, 3, \color{#4CA384}{2}, 0, 12\}$
 
 ```{r, echo = F, out.width='85%'}
 knitr::include_graphics('images/SPSSmode.PNG')
@@ -351,31 +369,31 @@ knitr::include_graphics('images/SPSSmode.PNG')
 ```{r, echo = F, message = F, fig.height=2.5, fig.width=4}
 set.seed(113)
 x <- round(rnorm(250, 25, 20))
-ggplot(mapping = aes(x)) + geom_histogram(fill = baseColor, color = 'darkgray', binwidth = 2) +
+ggplot(mapping = aes(x)) + geom_histogram(fill = baseColor, color = accent3, binwidth = 2) +
   theme(axis.text = element_blank(),
         axis.ticks = element_blank(),
         axis.title = element_blank()) +
-  geom_vline(xintercept = mean(x), color = accent1) +
-  geom_vline(xintercept = median(x), color = accent2) +
-  geom_vline(xintercept = round(Mode(x)), color = accent3) +
-  annotate('text', label = paste('Mean =', round(mean(x), 2)), color = accent1, x = 60, y = 18) +
-  annotate('text', label = paste('Median =', round(median(x), 2)), color = accent2, x = 60, y = 16) +
-  annotate('text', label = paste('Mode =', round(Mode(x))), color = accent3, x = 60, y = 14)
+  geom_vline(xintercept = mean(x), color = accent1, linewidth = 1.5) +
+  geom_vline(xintercept = median(x), color = accent2, linewidth = 1.5) +
+  geom_vline(xintercept = round(Mode(x)), color = accent3, linewidth = 1.5) +
+  annotate('text', label = paste('Mean =', round(mean(x), 2)), color = accent1, x = 60, y = 18, size = 4.5) +
+  annotate('text', label = paste('Median =', round(median(x), 2)), color = accent2, x = 60, y = 16, size = 4.5) +
+  annotate('text', label = paste('Mode =', round(Mode(x))), color = accent3, x = 60, y = 14, size = 4.5)
 ```
 
 ```{r, echo = F, message = F, fig.height=2.5, fig.width=4}
 set.seed(926)
 y <- round(rnorm(250, 25, 3))
-ggplot(mapping = aes(y)) + geom_histogram(fill = baseColor, color = 'darkgray', binwidth = 2) +
+ggplot(mapping = aes(y)) + geom_histogram(fill = baseColor, color = accent3, binwidth = 2) +
   theme(axis.text = element_blank(),
         axis.ticks = element_blank(),
         axis.title = element_blank()) +
-  geom_vline(xintercept = mean(y), color = accent1) +
-  geom_vline(xintercept = median(y), color = accent2) +
-  geom_vline(xintercept = round(Mode(y)), color = accent3) +
-  annotate('text', label = paste('Mean =', round(mean(y), 2)), color = accent1, x = 30, y = 55) +
-  annotate('text', label = paste('Median =', round(median(y), 2)), color = accent2, x = 30, y = 50) +
-  annotate('text', label = paste('Mode =', round(Mode(y))), color = accent3, x = 30, y = 45)
+  geom_vline(xintercept = mean(y), color = accent1, linewidth = 1.5) +
+  geom_vline(xintercept = median(y), color = accent2, linewidth = 1.5) +
+  geom_vline(xintercept = round(Mode(y)), color = accent3, linewidth = 1.5) +
+  annotate('text', label = paste('Mean =', round(mean(y), 2)), color = accent1, x = 30, y = 55, size = 4.5) +
+  annotate('text', label = paste('Median =', round(median(y), 2)), color = accent2, x = 30, y = 50, size = 4.5) +
+  annotate('text', label = paste('Mode =', round(Mode(y))), color = accent3, x = 30, y = 45, size = 4.5)
 ```
 ]
 
@@ -383,31 +401,31 @@ ggplot(mapping = aes(y)) + geom_histogram(fill = baseColor, color = 'darkgray', 
 ```{r, echo = F, message = F, fig.height=2.5, fig.width=4}
 set.seed(1022)
 z <- round(runif(100, 0, 10))
-ggplot(mapping = aes(z)) + geom_histogram(fill = baseColor, color = 'darkgray', binwidth = 1) +
+ggplot(mapping = aes(z)) + geom_histogram(fill = baseColor, color = accent3, binwidth = 1) +
   theme(axis.text = element_blank(),
         axis.ticks = element_blank(),
         axis.title = element_blank()) +
-  geom_vline(xintercept = mean(z), color = accent1) +
-  geom_vline(xintercept = median(z), color = accent2) +
-  geom_vline(xintercept = round(Mode(z)), color = accent3) +
-  annotate('text', label = paste('Mean =', round(mean(z), 2)), color = accent1, x = 9 , y = 17) +
-  annotate('text', label = paste('Median =', round(median(z), 2)), color = accent2, x = 9 , y = 15.5) +
-  annotate('text', label = paste('Mode =', round(Mode(z))), color = accent3, x = 9 , y = 14)
+  geom_vline(xintercept = mean(z), color = accent1, linewidth = 1.5) +
+  geom_vline(xintercept = median(z), color = accent2, linewidth = 1.5) +
+  geom_vline(xintercept = round(Mode(z)), color = accent3, linewidth = 1.5) +
+  annotate('text', label = paste('Mean =', round(mean(z), 2)), color = accent1, x = 9 , y = 17, size = 4.5) +
+  annotate('text', label = paste('Median =', round(median(z), 2)), color = accent2, x = 9 , y = 15.5, size = 4.5) +
+  annotate('text', label = paste('Mode =', round(Mode(z))), color = accent3, x = 9 , y = 14, size = 4.5)
 ```
 
 ```{r, echo = F, message = F, fig.height=2.5, fig.width=4}
 set.seed(526)
 a <- rbeta(100, 10, .5)
-ggplot(mapping = aes(a)) + geom_histogram(fill = baseColor, color = 'darkgray', binwidth = .01) +
+ggplot(mapping = aes(a)) + geom_histogram(fill = baseColor, color = accent3, binwidth = .01) +
   theme(axis.text = element_blank(),
         axis.ticks = element_blank(),
         axis.title = element_blank()) +
-  geom_vline(xintercept = mean(a), color = accent1) +
-  geom_vline(xintercept = median(a), color = accent2) +
-  geom_vline(xintercept = round(Mode(a),2), color = accent3) +
-  annotate('text', label = paste('Mean =', round(mean(a), 2)*315), color = accent1, x = .75, y = 17) +
-  annotate('text', label = paste('Median =', round(median(a), 2)*315), color = accent2, x = .75 , y = 15) +
-  annotate('text', label = paste('Mode =', round(Mode(a),2)*315), color = accent3, x = .75, y = 13)
+  geom_vline(xintercept = mean(a), color = accent1, linewidth = 1.5) +
+  geom_vline(xintercept = median(a), color = accent2, linewidth = 1.5) +
+  geom_vline(xintercept = round(Mode(a),2), color = accent3, linewidth = 1.5) +
+  annotate('text', label = paste('Mean =', round(mean(a), 2)*315), color = accent1, x = .75, y = 17, size = 4.5) +
+  annotate('text', label = paste('Median =', round(median(a), 2)*315), color = accent2, x = .75 , y = 15, size = 4.5) +
+  annotate('text', label = paste('Mode =', round(Mode(a),2)*315), color = accent3, x = .75, y = 13, size = 4.5)
 ```
 
 ]
@@ -766,7 +784,7 @@ varPlot
 
 .pull-left[
 
-$$s^2 = \frac{\sum(\color{#D95829}{x_i}-\bar{x})^2}{n-1}$$
+$$s^2 = \frac{\sum(\color{#4CA384}{x_i}-\bar{x})^2}{n-1}$$
 
 + $x_i$ = individual observations of x
 ]
@@ -782,7 +800,7 @@ varPlot + geom_point(color = accent1, size = 3)
 ## Variation in Scores - Variance
 
 .pull-left[
-$$s^2 = \frac{\sum(x_i-\color{#D95829}{\bar{x}})^2}{n-1}$$
+$$s^2 = \frac{\sum(x_i-\color{#4CA384}{\bar{x}})^2}{n-1}$$
 
 
 + $x_i$ = individual observations of x
@@ -803,7 +821,7 @@ varPlot
 ## Variation in Scores - Variance
 
 .pull-left[
-$$s^2 = \frac{\sum(\color{#D95829}{x_i-\bar{x}})^2}{n-1}$$
+$$s^2 = \frac{\sum(\color{#4CA384}{x_i-\bar{x}})^2}{n-1}$$
 
 
 + $x_i$ = individual observations of x
@@ -828,7 +846,7 @@ varPlot + geom_segment(aes(x = Participant, y = Age, xend = Participant, yend = 
 ## Variation in Scores - Variance
 
 .pull-left[
-$$s^2 = \frac{\sum(x_i-\bar{x})\color{#D95829}{^2}}{n-1}$$
+$$s^2 = \frac{\sum(x_i-\bar{x})\color{#4CA384}{^2}}{n-1}$$
 
 
 + $x_i$ = individual observations of x
@@ -938,11 +956,11 @@ $$SD =\sqrt\frac{\sum(x_i-\bar{x})^2}{n-1}$$
 ```{r, echo = F, fig.height=2, fig.width=4}
 set.seed(444)
 f <- rnorm(200, 10, 1)
-ggplot(mapping=aes(f)) + geom_histogram(fill = baseColor, color = 'darkgray', bins=15) +
+ggplot(mapping=aes(f)) + geom_histogram(fill = baseColor, color = accent3, bins=15) +
   theme(axis.text = element_blank(),
         axis.ticks = element_blank(),
         axis.title = element_blank()) +
-  geom_vline(xintercept = mean(f), color = accent1)
+  geom_vline(xintercept = mean(f), color = accent1, linewidth = 1.5)
 ```
 
 **Mean = 10, SD = 10**
@@ -950,11 +968,11 @@ ggplot(mapping=aes(f)) + geom_histogram(fill = baseColor, color = 'darkgray', bi
 ```{r, echo = F, fig.height=2, fig.width=4}
 set.seed(602)
 m <- rnorm(200, 10, 10)
-ggplot(mapping=aes(m)) + geom_histogram(fill = baseColor, color = 'darkgray', bins=15) +
+ggplot(mapping=aes(m)) + geom_histogram(fill = baseColor, color = accent3, bins=15) +
   theme(axis.text = element_blank(),
         axis.ticks = element_blank(),
         axis.title = element_blank()) +
-  geom_vline(xintercept = mean(m), color = accent1)
+  geom_vline(xintercept = mean(m), color = accent1, linewidth = 1.5)
 
 ```
 
@@ -1298,7 +1316,7 @@ normDist <- ggplot(data.frame(X = c(-6, 6)), aes(x = X)) +
         axis.ticks = element_blank(),
         axis.title.y = element_blank())
 
-normDist + geom_vline(xintercept = 0, color=accent1)
+normDist + geom_vline(xintercept = 0, color=accent2, linewidth = 1.5)
 ```
 ]
 
@@ -1316,10 +1334,10 @@ normDist + geom_vline(xintercept = 0, color=accent1)
 .pull-right[
 
 ```{r, echo = F, fig.width=5, fig.height=3.5}
-normDist + geom_vline(xintercept = 0, color=accent1) + 
+normDist + geom_vline(xintercept = 0, color=accent2, linewidth = 1.5) + 
   stat_function(fun=dnorm, geom = "line", args = list(mean = 2), linewidth = 1.5, color = baseColor) +
-  stat_function(fun=dnorm, geom = "line", args = list(mean = -2), linewidth = 1.5, color = accent3) +
-  annotate(geom='text', label=paste0('mu == -2'), parse = T, x=-5, y=0.32, size = 6, colour = accent3, hjust = 0) +
+  stat_function(fun=dnorm, geom = "line", args = list(mean = -2), linewidth = 1.5, color = accent1) +
+  annotate(geom='text', label=paste0('mu == -2'), parse = T, x=-5, y=0.32, size = 6, colour = accent1, hjust = 0) +
   annotate(geom='text', label=paste0('mu == 0'), parse = T, x=-5, y=0.35, size = 6, hjust = 0) +
   annotate(geom='text', label=paste0('mu == 2'), parse = T, x=-5, y=0.38, size = 6, colour = baseColor, hjust = 0)
 ```
@@ -1342,10 +1360,10 @@ Adjusting the mean changes where the curve is centered on the $x$-axis
 .pull-right[
 
 ```{r, echo = F, fig.width=5, fig.height=3.5}
-normDist + geom_vline(xintercept = 0, color=accent1) + 
+normDist + geom_vline(xintercept = 0, color=accent2, linewidth = 1.5) + 
   stat_function(fun=dnorm, geom = "line", args = list(sd = .5), linewidth = 1.5, color = baseColor) +
-  stat_function(fun=dnorm, geom = "line", args = list(sd = 1.5), linewidth = 1.5, color = accent3) +
-  annotate(geom='text', label=paste0('mu == -2'), parse = T, x=-5, y=0.61, size = 6, colour = accent3, hjust = 0) +
+  stat_function(fun=dnorm, geom = "line", args = list(sd = 1.5), linewidth = 1.5, color = accent1) +
+  annotate(geom='text', label=paste0('mu == -2'), parse = T, x=-5, y=0.61, size = 6, colour = accent1, hjust = 0) +
   annotate(geom='text', label=paste0('mu == 0'), parse = T, x=-5, y=0.68, size = 6, hjust = 0) +
   annotate(geom='text', label=paste0('mu == .5'), parse = T, x=-5, y=.75, size = 6, colour = baseColor, hjust = 0)
 ```
@@ -1368,8 +1386,8 @@ Adjusting the $SD$ changes the shape of the curve
 ]
 .pull-right[
 ```{r, echo = F, fig.width=5, fig.height=3.5}
-normDist + geom_area(stat = 'function', fun = dnorm, fill = baseColor, xlim=c(-1, 1), alpha = .7) + 
-  geom_vline(xintercept = 0, color=accent1)
+normDist + geom_area(stat = 'function', fun = dnorm, fill = accent1, xlim=c(-1, 1), alpha = .7) + 
+  geom_vline(xintercept = 0, color=accent3, linewidth = 1.5)
 ```
 ]
 
@@ -1388,8 +1406,8 @@ normDist + geom_area(stat = 'function', fun = dnorm, fill = baseColor, xlim=c(-1
 ]
 .pull-right[
 ```{r, echo = F, fig.width=5, fig.height=3.5}
-normDist + geom_area(stat = 'function', fun = dnorm, fill = accent3, xlim=c(-1.96, 1.96), alpha = .7) + 
-  geom_vline(xintercept = 0, color=accent1)
+normDist + geom_area(stat = 'function', fun = dnorm, fill = baseColor, xlim=c(-1.96, 1.96), alpha = .7) + 
+  geom_vline(xintercept = 0, color=accent3, linewidth = 1.5)
 ```
 ]
 
@@ -1410,7 +1428,7 @@ normDist + geom_area(stat = 'function', fun = dnorm, fill = accent3, xlim=c(-1.9
 .pull-right[
 ```{r, echo = F, fig.width = 5, fig.height = 3.5}
 normDist + geom_area(stat = 'function', fun = dnorm, fill = accent2, xlim=c(-3, 3), alpha = .7) +
-  geom_vline(xintercept = 0, color=accent1)
+  geom_vline(xintercept = 0, color=accent3, linewidth = 1.5)
 ```
 ]
 
@@ -1436,8 +1454,8 @@ waisDist <- ggplot(data.frame(X=c(-4, 4)), aes(x=X)) +
         axis.title.y = element_blank())
 
 waisDist + 
-  annotate(geom='segment', x=0, xend=0, y=0, yend=.4, color = accent1, linetype='dashed', linewidth = 1) +
-  annotate(geom='text', label = 'A', x=0, y = -.02, color = accent1, size = 5)
+  annotate(geom='segment', x=0, xend=0, y=0, yend=.4, color = accent3, linetype='dashed', linewidth = 1.5) +
+  annotate(geom='text', label = 'A', x=0, y = -.02, color = accent3, size = 5)
 ```
 ]
 
@@ -1450,16 +1468,16 @@ waisDist +
 ```{r, echo = F, fig.width=8, fig.height=4}
 
 waisDist <- waisDist + 
-  annotate(geom='text', label = '100', x = 0, y = -.02, size = 5, color = accent1) +
+  annotate(geom='text', label = '100', x = 0, y = -.02, size = 5, color = accent3) +
   annotate(geom='segment', x=0, xend=0, y=.01, yend=-.01)
 
 waisDist + 
-  geom_area(stat = 'function', fun = dnorm, fill = baseColor, xlim=c(-1, 1), alpha = .7) +
-  annotate(geom='segment', x=-1, xend=-1, y=0, yend=.4, color = baseColor, linetype='dashed', linewidth = 1) +
-  annotate(geom='segment', x=1, xend=1, y=0, yend=.4, color = baseColor, linetype='dashed', linewidth = 1) +
+  geom_area(stat = 'function', fun = dnorm, fill = accent1, xlim=c(-1, 1), alpha = .7) +
+  annotate(geom='segment', x=-1, xend=-1, y=0, yend=.4, color = accent1, linetype='dashed', linewidth = 1) +
+  annotate(geom='segment', x=1, xend=1, y=0, yend=.4, color = accent1, linetype='dashed', linewidth = 1) +
   annotate(geom = 'text', label = '~68%', x = 0, y = .2, color='white', size = 7) +
-  annotate(geom='text', label = 'C', x=1, y = -.02, color = baseColor, size = 5) +
-  annotate(geom='text', label = 'B', x=-1, y = -.02, color = baseColor, size = 5)
+  annotate(geom='text', label = 'C', x=1, y = -.02, color = accent1, size = 5) +
+  annotate(geom='text', label = 'B', x=-1, y = -.02, color = accent1, size = 5)
   
 ```
 ]
@@ -1473,19 +1491,19 @@ waisDist +
 ```{r, echo = F, fig.width=8, fig.height=4}
 
 waisDist <- waisDist + 
-  annotate(geom='text', label = '85', x = -1, y = -.02, size = 5, color = baseColor) +
+  annotate(geom='text', label = '85', x = -1, y = -.02, size = 5, color = accent1) +
   annotate(geom='segment', x=-1, xend=-1, y=.01, yend=-.01) +
-  annotate(geom='text', label = '115', x = 1, y = -.02, size = 5, color = baseColor) +
+  annotate(geom='text', label = '115', x = 1, y = -.02, size = 5, color = accent1) +
   annotate(geom='segment', x=1, xend=1, y=.01, yend=-.01)
   
 
 waisDist + 
-  geom_area(stat = 'function', fun = dnorm, fill = accent3, xlim=c(-1.96, 1.96), alpha = .7) +  
-  annotate(geom='segment', x=-1.96, xend=-1.96, y=0, yend=.4, color = accent3, linetype='dashed', linewidth = 1) +
-  annotate(geom='segment', x=1.96, xend=1.96, y=0, yend=.4, color = accent3, linetype='dashed', linewidth = 1) +
+  geom_area(stat = 'function', fun = dnorm, fill = baseColor, xlim=c(-1.96, 1.96), alpha = .7) +  
+  annotate(geom='segment', x=-1.96, xend=-1.96, y=0, yend=.4, color = baseColor, linetype='dashed', linewidth = 1) +
+  annotate(geom='segment', x=1.96, xend=1.96, y=0, yend=.4, color = baseColor, linetype='dashed', linewidth = 1) +
   annotate(geom = 'text', label = '~95%', x = 0, y = .2, color='white', size = 7) +
-  annotate(geom='text', label = 'E', x= 1.96, y = -.02, color = accent3, size = 5) +
-  annotate(geom='text', label = 'D', x=-1.96, y = -.02, color = accent3, size = 5)
+  annotate(geom='text', label = 'E', x= 1.96, y = -.02, color = baseColor, size = 5) +
+  annotate(geom='text', label = 'D', x=-1.96, y = -.02, color = baseColor, size = 5)
   
 ```
 ]
@@ -1500,9 +1518,9 @@ waisDist +
 ```{r, echo = F, fig.width=8, fig.height=4}
 
 waisDist <- waisDist + 
-  annotate(geom='text', label = '70', x = -1.96, y = -.02, size = 5, color = accent3) +
+  annotate(geom='text', label = '70', x = -1.96, y = -.02, size = 5, color = baseColor) +
   annotate(geom='segment', x=-1.96, xend=-1.96, y=.01, yend=-.01) +
-  annotate(geom='text', label = '130', x = 1.96, y = -.02, size = 5, color = accent3) +
+  annotate(geom='text', label = '130', x = 1.96, y = -.02, size = 5, color = baseColor) +
   annotate(geom='segment', x=1.96, xend=1.96, y=.01, yend=-.01)
   
 
@@ -1533,20 +1551,20 @@ waisDist <- waisDist +
   
 
 waisDist + 
-  annotate(geom='text', label = 'Mean', x = 0, y = -.045, size = 5, color = accent1) +
-  annotate(geom='text', label = '-1 SD', x = -1, y = -.045, size = 5, color = baseColor) +
-  annotate(geom='text', label = '+1 SD', x = 1, y = -.045, size = 5, color = baseColor) +
-  annotate(geom='text', label = '-~2 SD', x = -1.96, y = -.045, size = 5, color = accent3) +
-  annotate(geom='text', label = '+~2 SD', x = 1.96, y = -.045, size = 5, color = accent3) +
+  annotate(geom='text', label = 'Mean', x = 0, y = -.045, size = 5, color = accent3) +
+  annotate(geom='text', label = '-1 SD', x = -1, y = -.045, size = 5, color = accent1) +
+  annotate(geom='text', label = '+1 SD', x = 1, y = -.045, size = 5, color = accent1) +
+  annotate(geom='text', label = '-~2 SD', x = -1.96, y = -.045, size = 5, color = baseColor) +
+  annotate(geom='text', label = '+~2 SD', x = 1.96, y = -.045, size = 5, color = baseColor) +
   annotate(geom='text', label = '-3 SD', x = -3, y = -.045, size = 5, color = accent2) +
   annotate(geom='text', label = '+3 SD', x = 3, y = -.045, size = 5, color = accent2) +
   annotate(geom='segment', x=-3, xend=-3, y=0, yend=.01, color = accent2, linetype='dashed', linewidth = 1) +
   annotate(geom='segment', x=3, xend=3, y=0, yend=.01, color = accent2, linetype='dashed', linewidth = 1) +   
-  annotate(geom='segment', x=-1.96, xend=-1.96, y=0, yend=.06, color = accent3, linetype='dashed', linewidth = 1) +
-  annotate(geom='segment', x=1.96, xend=1.96, y=0, yend=.06, color = accent3, linetype='dashed', linewidth = 1) + 
-  annotate(geom='segment', x=-1, xend=-1, y=0, yend=.25, color = baseColor, linetype='dashed', linewidth = 1) +
-  annotate(geom='segment', x=1, xend=1, y=0, yend=.25, color = baseColor, linetype='dashed', linewidth = 1) +
-  annotate(geom='segment', x=0, xend=0, y=0, yend=.4, color = accent1, linetype='dashed', linewidth = 1)
+  annotate(geom='segment', x=-1.96, xend=-1.96, y=0, yend=.06, color = baseColor, linetype='dashed', linewidth = 1) +
+  annotate(geom='segment', x=1.96, xend=1.96, y=0, yend=.06, color = baseColor, linetype='dashed', linewidth = 1) + 
+  annotate(geom='segment', x=-1, xend=-1, y=0, yend=.25, color = accent1, linetype='dashed', linewidth = 1) +
+  annotate(geom='segment', x=1, xend=1, y=0, yend=.25, color = accent1, linetype='dashed', linewidth = 1) +
+  annotate(geom='segment', x=0, xend=0, y=0, yend=.4, color = accent3, linetype='dashed', linewidth = 1)
 ```
 ]
 
@@ -1579,11 +1597,11 @@ skewDat$x <- round(skewDat$x)
 skewDat$x[14] <- 85
 skewDat$x[27] <- 85
 
-ggplot(skewDat, aes(x)) + geom_histogram(aes(y=after_stat(density)), fill = baseColor, color = 'gray32', binwidth=2) +
+ggplot(skewDat, aes(x)) + geom_histogram(aes(y=after_stat(density)), fill = baseColor, color = accent3, binwidth=2) +
   geom_density(linewidth=1) +
-  geom_vline(xintercept = mean(skewDat$x), color = accent1, linewidth = 1) +
-  geom_vline(xintercept = median(skewDat$x), color = accent2, linewidth = 1) +
-  geom_vline(xintercept = round(Mode(skewDat$x),2), color = accent3, linewidth = 1) +
+  geom_vline(xintercept = mean(skewDat$x), color = accent1, linewidth = 1.5) +
+  geom_vline(xintercept = median(skewDat$x), color = accent2, linewidth = 1.5) +
+  geom_vline(xintercept = round(Mode(skewDat$x),2), color = accent3, linewidth = 1.5) +
   annotate('text', label = 'Mean', color = accent1, x = 60, y = .05, size = 6, hjust = 0) +
   annotate('text', label = 'Median', color = accent2, x = 60 , y = .045, size = 6, hjust = 0) +
   annotate('text', label = 'Mode', color = accent3, x = 60, y = .04, size = 6, hjust = 0) +
@@ -1603,11 +1621,11 @@ skewDat <- data.frame(x=rbeta(200, 10, 2))
 skewDat$x <- (skewDat$x*100)*-1
 skewDat$x <- round(skewDat$x)
 
-ggplot(skewDat, aes(x)) + geom_histogram(aes(y=after_stat(density)), fill = baseColor, color = 'gray32', binwidth=2) +
+ggplot(skewDat, aes(x)) + geom_histogram(aes(y=after_stat(density)), fill = baseColor, color = accent3, binwidth=2) +
   geom_density(linewidth=1) +
-  geom_vline(xintercept = mean(skewDat$x), color = accent1, linewidth = 1) +
-  geom_vline(xintercept = median(skewDat$x), color = accent2, linewidth = 1) +
-  geom_vline(xintercept = round(Mode(skewDat$x),2), color = accent3, linewidth = 1) +
+  geom_vline(xintercept = mean(skewDat$x), color = accent1, linewidth = 1.5) +
+  geom_vline(xintercept = median(skewDat$x), color = accent2, linewidth = 1.5) +
+  geom_vline(xintercept = round(Mode(skewDat$x),2), color = accent3, linewidth = 1.5) +
   annotate('text', label = 'Mean', color = accent1, x = -70, y = .05, size = 6, hjust = 0) +
   annotate('text', label = 'Median', color = accent2, x = -70 , y = .045, size = 6, hjust = 0) +
   annotate('text', label = 'Mode', color = accent3, x = -70, y = .04, size = 6, hjust = 0) +
@@ -1632,7 +1650,7 @@ ggplot(skewDat, aes(x)) + geom_histogram(aes(y=after_stat(density)), fill = base
 ```{r, echo = F, message = F, fig.height=4}
 platDat <- data.frame(x=c(12:20, 20, rep(21, 5), 22, 22, 23, 23, 24:32, 13, 15, 15, 18, 27, 30, 30))
 
-ggplot(platDat, aes(x)) + geom_histogram(aes(y=after_stat(density)), fill = baseColor, color = 'gray32', binwidth=2) +
+ggplot(platDat, aes(x)) + geom_histogram(aes(y=after_stat(density)), fill = baseColor, color = accent3, binwidth=2) +
   geom_density(linewidth=1, adjust = 1.5) +
   theme(axis.text = element_blank(),
         axis.title.y = element_blank(),
@@ -1647,7 +1665,7 @@ ggplot(platDat, aes(x)) + geom_histogram(aes(y=after_stat(density)), fill = base
 ```{r, echo = F, message = F, fig.height=4}
 leptDat <- data.frame(x = c(12, 13, rep(14, 3), rep(15, 6), rep(16, 25), rep(17, 6), rep(18, 3), 19, 20))
 
-ggplot(leptDat, aes(x)) + geom_histogram(aes(y=after_stat(density)), fill = baseColor, color = 'gray32', binwidth=1) +
+ggplot(leptDat, aes(x)) + geom_histogram(aes(y=after_stat(density)), fill = baseColor, color = accent3, binwidth=1) +
   geom_density(linewidth=1, adjust = 1) +
   theme(axis.text = element_blank(),
         axis.title.y = element_blank(),
